--- a/src/views/organizations.home.ejs
+++ b/src/views/organizations.home.ejs
@@ -3,4 +3,5 @@
 <div class="flex flex-row flex-wrap justify-center items-center">
     <a class="panelButton" href="/page/organizations/editprofile">Editar perfil</a>
     <a class="panelButton" href="/page/organizations/viewprofile">Ver perfil</a>
+    <a class="panelButton" href="/page/organizations/customers">Gerenciar clientes</a>
 </div>
