--- a/src/views/organizations.login.ejs
+++ b/src/views/organizations.login.ejs
@@ -1,4 +1,4 @@
-<form method="post" onsubmit="console.log(event);" action="/post/organizations_login" class="w-56 mx-auto">
+<form method="post" action="/post/organizations_login" class="w-56 mx-auto">
     <%- include('components/ext_label', { props:
     { 
         label: "Nome de usuário", lineBreak: true, children: `<input type="text" class="w-full" name="orgUsername" />`
