--- a/public/twoutput.css
+++ b/public/twoutput.css
@@ -613,7 +613,8 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   border-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(115 115 115 / var(--tw-border-opacity));
-  padding: 0.25rem;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 
 .btn {
@@ -651,11 +652,108 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   padding: 1rem;
 }
 
+.pagination {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-left: 1rem;
+  display: block;
+  list-style-type: none;
+  font-size: 1rem;
+}
+
+.pagination li {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  display: inline;
+}
+
+.pagination .currentPageNum {
+  font-weight: 700;
+}
+
 .fieldset {
   margin: 0.5rem;
   border-radius: 0.375rem;
   border-width: 2px;
   padding: 0.5rem;
+}
+
+.responsibleTable {
+  display: block;
+  width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable {
+    display: table;
+  }
+}
+
+.responsibleTable thead {
+  display: block;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable thead {
+    display: table-header-group;
+  }
+}
+
+.responsibleTable th {
+  position: absolute;
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable th {
+    position: relative;
+    display: table-cell;
+  }
+}
+
+.responsibleTable tbody {
+  display: block;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable tbody {
+    display: table-row-group;
+  }
+}
+
+.responsibleTable tr {
+  display: block;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable tr {
+    display: table-row;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+
+.responsibleTable td {
+  display: block;
+}
+
+.responsibleTable td::before {
+  font-weight: 700;
+  --tw-content: attr(data-th)': ';
+  content: var(--tw-content);
+}
+
+@media (min-width: 1024px) {
+  .responsibleTable td {
+    display: table-cell;
+  }
+
+  .responsibleTable td::before {
+    --tw-content: none;
+    content: var(--tw-content);
+  }
 }
 
 .panelButton {
@@ -739,6 +837,10 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   display: flex;
 }
 
+.table {
+  display: table;
+}
+
 .grid {
   display: grid;
 }
@@ -759,6 +861,26 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   height: 13rem;
 }
 
+.h-\[1\.2em\] {
+  height: 1.2em;
+}
+
+.h-\[1\.2rem\] {
+  height: 1.2rem;
+}
+
+.h-\[1\.3em\] {
+  height: 1.3em;
+}
+
+.h-\[1\.3rem\] {
+  height: 1.3rem;
+}
+
+.h-\[1\.5em\] {
+  height: 1.5em;
+}
+
 .max-h-\[100\%\] {
   max-height: 100%;
 }
@@ -769,6 +891,18 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
 
 .w-72 {
   width: 18rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[1\.2rem\] {
+  width: 1.2rem;
+}
+
+.w-\[1\.3rem\] {
+  width: 1.3rem;
 }
 
 .w-auto {
@@ -789,6 +923,10 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
 
 .grow {
   flex-grow: 1;
+}
+
+.transform {
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .flex-row {
@@ -851,8 +989,16 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.fill-white {
+  fill: #fff;
+}
+
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .px-2 {
@@ -877,6 +1023,10 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-\[0\.9rem\] {
