--- a/src/views/customers.home.ejs
+++ b/src/views/customers.home.ejs
@@ -2,4 +2,5 @@
 
 <div class="flex flex-row flex-wrap justify-center items-center">
     <a class="panelButton" href="/page/customers/editprofile">Editar perfil</a>
+    <a class="panelButton" href="/page/customers/create_translation_session">Nova sala de tradução</a>
 </div>
