--- a/src/views/fragments/left_arrow.ejs
+++ b/src/views/fragments/left_arrow.ejs
@@ -1,4 +1,4 @@
-<svg className="w-[1.3rem] h-[1.3rem] inline-block" id="svg3578" viewBox="0 0 431.32 360.61">
+<svg class="w-[1.3rem] h-[1.3rem] inline-block" id="svg3578" viewBox="0 0 431.32 360.61">
     <g id="g3588" >
         <path
             id="path3590"
