--- a/public/twoutput.css
+++ b/public/twoutput.css
@@ -613,6 +613,8 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   border-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(115 115 115 / var(--tw-border-opacity));
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
@@ -782,8 +784,24 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   background-color: rgb(163 163 163 / var(--tw-bg-opacity));
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.right-0 {
+  right: 0px;
 }
 
 .m-2 {
@@ -823,6 +841,10 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
 }
 
 .block {
@@ -881,8 +903,24 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   height: 1.5em;
 }
 
+.h-\[300px\] {
+  height: 300px;
+}
+
 .max-h-\[100\%\] {
   max-height: 100%;
+}
+
+.max-h-screen {
+  max-height: 100vh;
+}
+
+.max-h-\[500px\] {
+  max-height: 500px;
+}
+
+.min-h-\[300px\] {
+  min-height: 300px;
 }
 
 .w-56 {
@@ -913,6 +951,14 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   width: 100%;
 }
 
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-1\/4 {
+  width: 25%;
+}
+
 .max-w-\[1000px\] {
   max-width: 1000px;
 }
@@ -927,6 +973,10 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .flex-row {
@@ -947,6 +997,10 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
 
 .justify-center {
   justify-content: center;
+}
+
+.overflow-y-auto {
+  overflow-y: auto;
 }
 
 .whitespace-pre-line {
@@ -989,16 +1043,17 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-neutral-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 64 64 / var(--tw-bg-opacity));
+}
+
 .fill-white {
   fill: #fff;
 }
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
 }
 
 .px-2 {
@@ -1178,6 +1233,18 @@ footer
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
+  }
+
+  .lg\:shrink {
+    flex-shrink: 1;
+  }
+
+  .lg\:grow {
+    flex-grow: 1;
   }
 
   .lg\:flex-row {
