--- a/src/views/interpreters.home.ejs
+++ b/src/views/interpreters.home.ejs
@@ -3,4 +3,5 @@
 <div class="flex flex-row flex-wrap justify-center items-center">
     <a class="panelButton" href="/page/interpreters/editprofile">Editar perfil</a>
     <a class="panelButton" href="/page/interpreters/viewprofile">Ver perfil</a>
+    <a class="panelButton" href="/page/interpreters/waitforcall">Disponibilizar-se para sessões de tradução</a>
 </div>
