--- a/src/views/customers.editprofile.ejs
+++ b/src/views/customers.editprofile.ejs
@@ -1,4 +1,4 @@
-<%- include('fragments/logged_customer_bar', { customerName }) %>
+<%- include('fragments/logged_customer_bar', { customerName, customerMinutes }) %>
 
 <% if (custObj) { %>
 <div class="frame">
