--- a/src/views/customers.home.ejs
+++ b/src/views/customers.home.ejs
@@ -1,6 +1,8 @@
-<%- include('fragments/logged_customer_bar', { customerName }) %>
+<%- include('fragments/logged_customer_bar', { customerName, customerMinutes }) %>
 
 <div class="flex flex-row flex-wrap justify-center items-center">
     <a class="panelButton" href="/page/customers/editprofile">Editar perfil</a>
-    <a class="panelButton" href="/page/customers/create_translation_session">Nova sala de tradução</a>
+    <a class="panelButton" href="/page/customers/create_translation_session">Nova sessão de tradução</a>
+    <a class="panelButton" href="/page/customers/interpreters">Relação de intérpretes</a>
+    <a class="panelButton" href="/page/customers/create_scheduled_session">Agendar sessão de tradução</a>
 </div>
