Principais funcionalidades terminadas

--- a/src/views/customers.home.ejs
+++ b/src/views/customers.home.ejs
@@ -2,7 +2,7 @@
 
 <div class="flex flex-row flex-wrap justify-center items-center">
     <a class="panelButton" href="/page/customers/editprofile">Editar perfil</a>
-    <a class="panelButton" href="/page/customers/create_translation_session">Nova sessão de tradução</a>
+    <a class="panelButton" href="/page/customers/create_translation_session">Abrir nova sessão de tradução</a>
     <a class="panelButton" href="/page/customers/interpreters">Relação de intérpretes</a>
-    <a class="panelButton" href="/page/customers/create_scheduled_session">Agendar sessão de tradução</a>
+    <a class="panelButton" href="/page/customers_schsessions/home">Sessões agendadas</a>
 </div>
