--- a/src/views/interpreters.home.ejs
+++ b/src/views/interpreters.home.ejs
@@ -4,4 +4,7 @@
     <a class="panelButton" href="/page/interpreters/editprofile">Editar perfil</a>
     <a class="panelButton" href="/page/interpreters/viewprofile">Ver perfil</a>
     <a class="panelButton" href="/page/interpreters/waitforcall">Disponibilizar-se para sessões de tradução</a>
+    <a class="panelButton" href="/page/interpreters/sessionschedules">Agendamentos disponíveis</a>
+    <a class="panelButton" href="/page/interpreters/mysessionschedules">Meus agendamentos confirmados</a>
+
 </div>
