--- a/src/views/organizations_mcustomers.delete.ejs
+++ b/src/views/organizations_mcustomers.delete.ejs
@@ -1,6 +1,6 @@
 <% if (custObj) { %>
     <div class="frame">
-        <form method="post" action="/post/organizations_mcustomers_delete?id=<%= custObj.get("id") %></form>">
+        <form method="post" action="/post/organizations_mcustomers_delete?id=<%= custObj.get("id") %>">
             <%- include('components/ext_label', { props: { label: "Nome", labelBold: true, children: helperFns.escapeHtml(custObj.get("name")) }}) %>
             <%- include('components/ext_label', { props: { label: "Nome de usuário", labelBold: true, children: helperFns.escapeHtml(custObj.get("username")) }}) %>
             <div class="text-center">
