Transferência de minutos implementada

--- a/src/views/customers.home.ejs
+++ b/src/views/customers.home.ejs
@@ -5,4 +5,6 @@
     <a class="panelButton" href="/page/customers/create_translation_session">Abrir nova sessão de tradução</a>
     <a class="panelButton" href="/page/customers/interpreters">Relação de intérpretes</a>
     <a class="panelButton" href="/page/customers_schsessions/home">Sessões agendadas</a>
+    <a class="panelButton" href="/page/customers/exchangeminutes">Transferir minutos</a>
+    <a class="panelButton" href="/page/customers_helpdesk/home">Suporte</a>
 </div>
