--- a/src/views/organizations_mcustomers.edit.ejs
+++ b/src/views/organizations_mcustomers.edit.ejs
@@ -10,6 +10,7 @@
             <%- include('components/ext_label', { props: { label: "Nome de usuário", children: `<input type="text" name="custUsername" maxlength="140" required value="${helperFns.escapeHtml(custObj.get('username'))}"/>` }}) %>
             <%- include('components/ext_label', { props: { label: "Alterar senha", children: `<input type="text" maxlength="140" name="txtNewPassword"/>` }}) %>
             <div class="text-center">
+                <input type="hidden" name="isOrganizationEdit" value="1" />
                 <input type="hidden" name="custId" value="<%= custObj.get("id") %>" />
                 <button type="submit" class="btn">Salvar</button>
             </div>
