--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf8"/>
+        <meta http-equiv="pragma" content="no-cache" />
+	    <meta content="width=device-width, initial-scale=1" name="viewport" />
         <title><%= controller.pageTitle %></title>
         <link rel="stylesheet" type="text/css" href="/twoutput.css"/>
         <script src="/global.js"></script>
