--- a/src/views/customers.home.ejs
+++ b/src/views/customers.home.ejs
@@ -6,5 +6,6 @@
     <a class="panelButton" href="/page/customers/interpreters">Relação de intérpretes</a>
     <a class="panelButton" href="/page/customers_schsessions/home">Sessões agendadas</a>
     <a class="panelButton" href="/page/customers/exchangeminutes">Transferir minutos</a>
+    <a class="panelButton" href="/page/customers/getguestqrcode">Gerar QR Code para visitantes</a>
     <a class="panelButton" href="/page/customers_helpdesk/home">Suporte</a>
 </div>
