--- a/src/views/organizations.home.ejs
+++ b/src/views/organizations.home.ejs
@@ -4,4 +4,6 @@
     <a class="panelButton" href="/page/organizations/editprofile">Editar perfil</a>
     <a class="panelButton" href="/page/organizations/viewprofile">Ver perfil</a>
     <a class="panelButton" href="/page/organizations_mcustomers/home">Gerenciar clientes</a>
+    <a class="panelButton" href="/page/organizations/distributeminutes">Distribuir minutos</a>
+    <a class="panelButton" href="/page/organizations/seizeminutes">Confiscar minutos</a>
 </div>
