--- a/src/views/organizations.login.ejs
+++ b/src/views/organizations.login.ejs
@@ -8,6 +8,7 @@
         label: "Senha", lineBreak: true, children: `<input type="password" class="w-full" name="orgPassword" />`
     }}) %>
     <div class="text-center">
+        <a href="/page/organizations/recoverpassword" class="link m-2">Esqueci a senha</a>
         <button type="submit" class="btn">Log-in</button>
     </div>
 </form>
