--- a/public/twoutput.css
+++ b/public/twoutput.css
@@ -1011,6 +1011,16 @@ input[type='text'], input[type='password'], input[type='search'], input[type='nu
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
+
 .list-disc {
   list-style-type: disc;
 }
