--- a/src/views/customers.getguestqrcode.ejs
+++ b/src/views/customers.getguestqrcode.ejs
@@ -3,4 +3,5 @@
 <div class="frame">
     <p>Imprima e/ou publique o QR Code abaixo para permitir aos visitantes gerar salas de tradução. Basta abrir o link e uma nova sala será criada!</p>
     <img src="<%- qrCodeUrlData %>" width="400" alt="QR Code" title="QR Code" />
+    <p><a href="<%= guestSessionUrl %>" class="link"><%= guestSessionUrl %></a></p>
 </div>
