Implementado relatório de sessões no painel de organização

--- a/src/views/organizations.home.ejs
+++ b/src/views/organizations.home.ejs
@@ -6,4 +6,5 @@
     <a class="panelButton" href="/page/organizations_mcustomers/home">Gerenciar clientes</a>
     <a class="panelButton" href="/page/organizations/distributeminutes">Distribuir minutos</a>
     <a class="panelButton" href="/page/organizations/seizeminutes">Confiscar minutos</a>
+    <a class="panelButton" href="/page/organizations/reportsessions">Relatório de sessões de atendimento</a>
 </div>
