Restrição de acesso às salas para clientes inativos implementada

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,8 +35,8 @@
             </main>
         </div>
         <footer>
-            Signum Platform
-            <p><%= loadedOrganization ? 'Uso contratado para ' + loadedOrganization.get('name') : '' %></p>
+            Central de Libras
+            <p><%= loadedOrganization ? loadedOrganization.get('name') : 'Signorum' %></p>
         </footer>
     </body>
 </html>
